react-app/src/stylesheets/ResultPage.scss
@import './_variables.scss';

.sidebar-col {
  min-width: 260px;
}

.sidebar {
  border-right-color: rgb(236, 236, 236);
  border-right-style: solid;
  border-right-width: 1px;
  box-sizing: border-box;
  color: rgb(33, 37, 41);
  display: flex;
  flex-direction: column;
  font-size: 16px;
  font-weight: 400;
  height: 100vh;
  line-height: 24px;
  position: sticky;
  top: 0px;
  z-index: 2234;
}

.sidebar-interior {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  height: 100vh;
}

.patient-json-display {
  margin-top: 30px;
}

.result-header {
  background-color: $dark-shade;
  color: white;
}

.result-header-text {
  font-family: 'Courier New', 'Monaco', monospace;
  font-size: 60px;
}

.result-label {
  overflow-wrap: break-word;
}

